--- a/CombatGame/CombatGame.csproj
+++ b/CombatGame/CombatGame.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Illusionist.cs" />
     <Compile Include="Damager.cs" />
     <Compile Include="Healer.cs" />
+    <Compile Include="Interface1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tank.cs" />
